2011-05-24 Coddy Levi <levi@lrde.epita.fr>

	Further correction of the component outlining bug.

	* scribo/util/component_outline.hh: Here.

2011-05-19  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve results.

	* scribo/primitive/extract/lines_h_thick_and_thin.hh: Fix structural element length.

	* scribo/primitive/extract/non_text_hdoc.hh: Filter too small images.

	* scribo/text/paragraphs.hh: Make it compile.

	* scribo/toolchain/internal/content_in_hdoc_functor.hh: Denoise
	larger objects. Fix vseparator image and binary_image_wo_seps.

	* src/primitive/extract/lines_thick_and_thin.cc: Be less severe on
	parameters.

2011-05-20 Coddy Levi <levi@lrde.epita.fr>

	Correct a bug in the compononent outlining algorithm.

	* scribo/util/component_outline.hh: Here.

2011-05-18 Julien Marquegnies <marquegnies@lrde.epita.fr>

	Improve paragraph grouping for historical documents.

	* scribo/core/line_info.hh,
	* scribo/text/merging.hh,
	* scribo/text/paragraphs.hh: Here.

2011-05-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix use of skeleton_constrained.

	* scribo/estim/components_features.hh,
	* scribo/estim/internal/compute_skeleton.hh: Here.

2011-05-16  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Add new tests.

	* tests/filter/Makefile.am,
	* tests/util/Makefile.am: Add new targets.

v	* tests/filter/objects_on_border.cc,
	* tests/util/component_outline.cc: New.

	* tests/img/comp_on_borders.pbm,
	* tests/img/multi_scale.png,
	* tests/img/single_object.pbm: New test data.

2011-05-16  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	New routine to extract both thin and thick separators.

	* scribo/primitive/extract/lines_h_thick_and_thin.hh,
	* src/primitive/extract/Makefile.am,
	* src/primitive/extract/lines_h_thick_and_thin.cc,
	* src/primitive/extract/lines_thick_and_thin.cc: New.

2011-05-16  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	* scribo/primitive/extract/non_text_hdoc.hh: New routine for
	historical documents.
